# duckduckgo-mcp-server

./: .dockerignore  .gitignore  CLAUDE_DESKTOP_REMOTE_SETUP.md  CLAUDE_DESKTOP_SETUP.md  CONNECTION_SOLUTION.md  CURSOR_SETUP.md  Dockerfile  IMPORTANT_NOTES.md  README.md  TROUBLESHOOTING.md  claude_desktop_config_example.json  claude_desktop_config_mac_final.json  claude_desktop_config_mac_remote_fixed.json  claude_desktop_configs.md  claude_desktop_remote_configs.md  compose.yaml  config.json  pyproject.toml  requirements.txt  run.py  server.py  setup_remote_connection.sh  specifications.md  test_search.py
